--- a/hello-world/values.yaml
+++ b/hello-world/values.yaml
@@ -79,5 +79,5 @@ tolerations: []
 affinity: {}
 
 configMap:
-  my_key: "config-map values.yaml"
+  my_key: "configmap values.yaml"
   my_key_2: "true"
