--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<name>hello-world</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<java.version>1.8</java.version>
+		<java.version>1.8</java.version>		
 	</properties>
 	<dependencies>
 		<dependency>
@@ -48,12 +48,20 @@
 				<version>2.8.0</version>
 				<configuration>
 					<to>
-						<image>kvncont/hello-world</image>
+						<image>docker.io/kvncont/hello-world</image>
 					</to>
 					<container>
                         <creationTime>USE_CURRENT_TIMESTAMP</creationTime>
                     </container>
 				</configuration>
+				<executions>
+					<execution>
+					  <phase>package</phase>
+					  <goals>
+						<goal>build</goal>
+					  </goals>
+					</execution>
+				  </executions>
 			</plugin>
 		</plugins>
 	</build>
