--- a/manifests/dev/k8s-service.yaml
+++ b/manifests/dev/k8s-service.yaml
@@ -1,10 +1,11 @@
-k8 apiVersion: v1
+apiVersion: v1
 kind: Service
 metadata:
   name: hello-world
 spec:
   selector:
     app: hello-world
+  type: LoadBalancer
   ports:
   - port: 80
     targetPort: 8080
