--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
+		<sonar.projectKey>kvncont_hello-world</sonar.projectKey>
+		<sonar.organization>kvncont</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 	<dependencies>
 		<dependency>
