Update Agent pool

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,7 +30,8 @@ stages:
 - stage: CI
   displayName: CI - Stage
   pool:
-    vmImage: ubuntu-latest
+    #vmImage: ubuntu-latest
+    name: linux-ubuntu
   jobs:
     - job: Build
       steps:
